--- a/extensions/fleet/fleet-compose.yml
+++ b/extensions/fleet/fleet-compose.yml
@@ -27,10 +27,14 @@ services:
     # Elastic Agent does not retry failed connections to Kibana upon the initial enrollment phase.
     restart: on-failure
     networks:
-      - elk
+      - elk_elk_network
     depends_on:
       - elasticsearch
       - kibana
+
+networks:
+    elk_elk_network:
+        external: true
 
 volumes:
   fleet-server:
