--- a/extensions/logspout/logspout-compose.yml
+++ b/extensions/logspout/logspout-compose.yml
@@ -13,7 +13,11 @@ services:
       ROUTE_URIS: logstash://logstash:50000
       LOGSTASH_TAGS: docker-elk
     networks:
-      - elk
+      - elk_elk_network
     depends_on:
       - logstash
     restart: on-failure
+
+networks:
+    elk_elk_network:
+        external: true
