--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,6 +145,9 @@ networks:
   elk_network:
     #driver: bridge
     attachable: true
+  traefik-public:
+    external: true
+
 
 volumes:
   setup:
