update nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,59 +1,90 @@
-# site.conf
-# https://uwsgi-docs.readthedocs.io/en/latest/tutorials/Django_and_nginx.html
+  
+http { 
+  # site.conf
+  # https://uwsgi-docs.readthedocs.io/en/latest/tutorials/Django_and_nginx.html
+  
+  
+  # NGINX will handle gzip compression of responses from the app server
+  gzip on;
+  gzip_proxied any;
+  gzip_types text/plain application/json;
+  gzip_comp_level 5;
+  gzip_buffers 16 8k;
+  gzip_min_length 1000;
+  proxy_buffering on;
+  proxy_buffer_size 16k;
+  proxy_busy_buffers_size 16k;
+  proxy_max_temp_file_size 2048m;
+  proxy_temp_file_write_size 32k;
+  #limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
+  
+  
+  
+  server {
+      listen 80 default_server;
+      server_name _;
+      return 301 https://$host$request_uri;
+  }
+  
+  server {
+      listen 443 ssl;
+      ssl_certificate /etc/nginx/certs/fullchain.pem;
+      ssl_certificate_key /etc/nginx/certs/privkey.pem;
+      
+  
+      # server_name localhost;
+      charset utf-8;
+  
+  
+      client_max_body_size 75M;
+  
+      error_log   /var/log/nginx/kibana.error.log;
+      access_log  /var/log/nginx/kibana.access.log;
+  
+  
+      location / {
+          #limit_req zone=mylimit;
+  
+          rewrite ^/(.*) /$1 break;
+          proxy_ignore_client_abort on;
+          proxy_pass http://kibana:5601;
+          proxy_http_version 1.1;
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection $connection_upgrade;                                                                                    
+          proxy_set_header Host $http_host;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto $scheme;
+          proxy_set_header X-Real-IP $remote_addr;   
+          add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
+          
+      }
 
+      location /elasticsearch {
+          #limit_req zone=mylimit;
+          proxy_pass http://elasticsearch:9200;
+          proxy_http_version 1.1;
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection $connection_upgrade;                                                                                    
+          proxy_set_header Host $http_host;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto $scheme;
+          proxy_set_header X-Real-IP $remote_addr;   
+          add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
+          
+      }
 
-# NGINX will handle gzip compression of responses from the app server
-gzip on;
-gzip_proxied any;
-gzip_types text/plain application/json;
-gzip_comp_level 5;
-gzip_buffers 16 8k;
-gzip_min_length 1000;
-proxy_buffering on;
-proxy_buffer_size 16k;
-proxy_busy_buffers_size 16k;
-proxy_max_temp_file_size 2048m;
-proxy_temp_file_write_size 32k;
-#limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
-
-
-
-server {
-    listen 80 default_server;
-    server_name _;
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    ssl_certificate /etc/nginx/certs/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/privkey.pem;
-    
-
-    # server_name localhost;
-    charset utf-8;
-
-
-    client_max_body_size 75M;
-
-    error_log   /var/log/nginx/kibana.error.log;
-    access_log  /var/log/nginx/kibana.access.log;
-
-
-    location / {
-        #limit_req zone=mylimit;
-
-        rewrite ^/(.*) /$1 break;
-        proxy_ignore_client_abort on;
-        proxy_pass http://kibana:5601;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;                                                                                    
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Real-IP $remote_addr;   
-        add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
-        
-    }
+      location /logstash {
+          #limit_req zone=mylimit;
+          proxy_pass http://logstash:5044;
+          proxy_http_version 1.1;
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection $connection_upgrade;                                                                                    
+          proxy_set_header Host $http_host;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto $scheme;
+          proxy_set_header X-Real-IP $remote_addr;   
+          add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
+          
+      }
+  }
 }
