--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,4 @@
+events{}
   
 http { 
   # site.conf
@@ -25,9 +26,18 @@ http {
       server_name _;
       return 301 https://$host$request_uri;
   }
-  
+
+  server {
+    listen 443 ssl;
+    server_name elk.smarthis.com.br;
+    return 301 https://kibana.elk.smarthis.com.br$request_uri;
+    ssl_certificate /etc/nginx/certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/privkey.pem;
+  }
+
   server {
       listen 443 ssl;
+      server_name kibana.elk.smarthis.com.br;
       ssl_certificate /etc/nginx/certs/fullchain.pem;
       ssl_certificate_key /etc/nginx/certs/privkey.pem;
       
@@ -38,8 +48,8 @@ http {
   
       client_max_body_size 75M;
   
-      error_log   /var/log/nginx/kibana.error.log;
-      access_log  /var/log/nginx/kibana.access.log;
+    #   error_log   /var/log/nginx/kibana.error.log;
+    #   access_log  /var/log/nginx/kibana.access.log;
   
   
       location / {
@@ -49,42 +59,73 @@ http {
           proxy_ignore_client_abort on;
           proxy_pass http://kibana:5601;
           proxy_http_version 1.1;
-          proxy_set_header Upgrade $http_upgrade;
-          proxy_set_header Connection $connection_upgrade;                                                                                    
-          proxy_set_header Host $http_host;
+
+
+
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
           proxy_set_header X-Real-IP $remote_addr;   
-          add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
           
       }
 
-      location /elasticsearch {
+  }
+
+  server {
+      listen 443 ssl;
+      server_name elasticsearch.elk.smarthis.com.br;
+      ssl_certificate /etc/nginx/certs/fullchain.pem;
+      ssl_certificate_key /etc/nginx/certs/privkey.pem;
+      
+  
+      # server_name localhost;
+      charset utf-8;
+  
+  
+      client_max_body_size 75M;
+
+
+      location / {
           #limit_req zone=mylimit;
+          rewrite ^/elasticsearch(.*) /$1 break;
           proxy_pass http://elasticsearch:9200;
           proxy_http_version 1.1;
-          proxy_set_header Upgrade $http_upgrade;
-          proxy_set_header Connection $connection_upgrade;                                                                                    
-          proxy_set_header Host $http_host;
+
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
           proxy_set_header X-Real-IP $remote_addr;   
-          add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
+
           
       }
 
-      location /logstash {
-          #limit_req zone=mylimit;
-          proxy_pass http://logstash:5044;
-          proxy_http_version 1.1;
-          proxy_set_header Upgrade $http_upgrade;
-          proxy_set_header Connection $connection_upgrade;                                                                                    
-          proxy_set_header Host $http_host;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-          proxy_set_header X-Real-IP $remote_addr;   
-          add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
+  }
+
+  server {
+      listen 443 ssl;
+      server_name logstash.elk.smarthis.com.br;
+      ssl_certificate /etc/nginx/certs/fullchain.pem;
+      ssl_certificate_key /etc/nginx/certs/privkey.pem;
+      
+  
+      # server_name localhost;
+      charset utf-8;
+  
+  
+      client_max_body_size 75M;
+
+
+     location / {
+        #limit_req zone=mylimit;
+         rewrite ^/logstash(.*) /$1 break;
+         proxy_pass http://logstash:5044;
+         proxy_http_version 1.1;
+         proxy_set_header Upgrade $http_upgrade;
+         #proxy_set_header Connection $connection_upgrade;                                                                                    
+         proxy_set_header Host $http_host;
+         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+         proxy_set_header X-Forwarded-Proto $scheme;
+         proxy_set_header X-Real-IP $remote_addr;   
+         add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
           
-      }
+     }
   }
 }
