--- a/nginx-docker-compose.yml
+++ b/nginx-docker-compose.yml
@@ -11,11 +11,15 @@ services:
   # any modification to existing users.
   proxy:
       #build: ./nginx
-      image: nginx:1.20.1
+      image: nginx:1.24.0-bullseye
       #entrypoint: dockerize -template /app/nginx/default.temp.conf:/etc/nginx/conf.d/default.conf -wait tcp://app:8000 nginx
       ports:
         - 80:80
         - 443:443
+      depends_on:
+        - elasticsearch
+        - logstash
+        - kibana
       networks:
         - elk
       volumes:
